resolve PR comments around single subscription name + fixes